viz: Enforce destruction order.

Enforce that all mojom::CompositorFrameSinks are destroyed before
FrameSinkManagerImpl is destroyed. Running with VizDisplayCompositor
this will ensure that no RootCompositorFrameSinkImpls exist that could
deadlock the compositor and GPU thread on destruction. For normal Chrome
this will only effect offscreen canvas. Fix offscreen canvas tests so
they destroy everything that is created.

Bug: 820437
Change-Id: I5bd71456ea86fb6b1d89347f4d39de75a72dd86a
Reviewed-on: https://chromium-review.googlesource.com/969590
Commit-Queue: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Olivia Lai <xlai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544827}
Former-commit-id: 0a7b11f6cd1d844204ccd814a4b40b63c106c26f